# cpp-project-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile_commands.json  conanfile.txt  project_build.sh  setup.sh
.devcontainer/: Dockerfile
app/: CMakeLists.txt
app/include/: foo.h
app/src/: app_main.cpp  foo.cpp
cmake/: build_options.cmake  compiler_options.cmake  conan.cmake  conan_config.cmake  cpm_dependencies.cmake  project_settings.cmake  sanitizers.cmake  sources.cmake  static_analyzers.cmake
include/: header.hpp
libs/: CMakeLists.txt
libs/dynamic_lib/: CMakeLists.txt
libs/dynamic_lib/include/: multiplier.h
libs/dynamic_lib/src/: multiplier.cpp
libs/header_only_lib/: CMakeLists.txt
libs/header_only_lib/include/: adder.h
libs/static_lib/: CMakeLists.txt
libs/static_lib/include/: subtracter.h
libs/static_lib/src/: subtracter.cpp
src/: main.cpp
src/driver/: main.cpp
src/driver/include/: main.hpp
src/include/: main.hpp
src/include/lib/: tmp.hpp
src/lib/: tmp.cpp
src/source/: main.cpp
test/: CMakeLists.txt  tests.cpp
test/include/: tests.hpp  tmp_test.hpp
test/src/: tmp_test.cpp
